# PO

./: README.md
GS/: CMakeLists.txt  DataFrame.cpp  DataFrame.h  GS_pl_PL.ts  Map.cpp  Map.h  Resources.qrc  SerialPort.cpp  SerialPort.h  SerialPortManager.cpp  SerialPortManager.h  connectionwindow.cpp  connectionwindow.h  connectionwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.html
GS/src/: DataFrame.cpp  SerialPortManager.cpp
GroundStation/: .gitignore  CMakeLists.txt  DataFrameParser.cpp  DataFrameParser.h  UIStyler.cpp  UIStyler.h
GroundStation/inc/: AppException.h  DataDisplayController.h  DataFrame.h  DataFrameParser.h  DataSeries.h  DataType.h  DataValueLabelView.h  ErrorCode.h  ErrorNotifier.h  GraphController.h  GraphManager.h  IDataParser.h  ISerialPort.h  Map.h  Parser.h  PlotWidgetController.h  PlotWidgetView.h  SerialPort.h  SerialPortCreator.h  SerialPortManager.h  StatsController.h  UARTParser.h  UIStyler.h  UnixSerialPortManager.h  connectionwindow.h  mainwindow.h
GroundStation/resources/: GroundStation_pl_PL.qm  GroundStation_pl_PL.ts  Resources.qrc
GroundStation/src/: DataDisplayController.cpp  DataFrame.cpp  DataFrameParser.cpp  DataSeries.cpp  DataType.cpp  DataValueLabelView.cpp  ErrorNotifier.cpp  GraphController.cpp  GraphManager.cpp  IDataParser.cpp  Map.cpp  Parser.cpp  PlotWidgetController.cpp  PlotWidgetView.cpp  SerialPort.cpp  SerialPortManager.cpp  StatsController.cpp  UARTParser.cpp  UIStyler.cpp  UnixSerialPortManager.cpp  connectionwindow.cpp  main.cpp  mainwindow.cpp
GroundStation/src/tests/: UARTReceiveTest.cpp  UARTReceiveTest.h
GroundStation/ui/: connectionwindow.ui  mainwindow.ui
Kalkulator/: CMakeLists.txt  Kalkulator.cpp  Kalkulator.h  Kalkulator.vcxproj  Kalkulator.vcxproj.filters  Memory.cpp  Memory.h  main.cpp
Kalkulator/x64/Debug/: Kalkulator.exe.recipe  Kalkulator.ilk  vc143.idb
Kalkulator/x64/Debug/Kalkulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Kalkulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Kalkulator_QT/: CMakeLists.txt  CMakeLists.txt.user.a49b266  CMakeLists.txt.user.aa59da3  EasterEggWindow.cpp  EasterEggWindow.h  EasterEggWindow.ui  Res.qrc  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  convertsystems.cpp  convertsystems.h  convertsystems.ui  dialog.ui  kalkulator.cpp  kalkulator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  readme.md
